# candlelight-quest

./: .gitignore  README.md  config.toml  pyproject.toml
src/text_rpg/: __main__.py  app.py  utils.py
src/text_rpg/cli/: character_creator.py  combat_display.py  display.py  input_handler.py  main.py  map_display.py  status_bar.py
src/text_rpg/content/: loader.py  origins.toml
src/text_rpg/engine/: action_dispatcher.py  event_handlers.py  snapshots.py  (+3 more)
tests/: conftest.py  test_combat_integration.py  test_director_schemas.py  test_director_triggers.py  test_trait_integration.py  test_utils.py
tests/test_cli/: test_input_handler.py  test_spell_creation_input.py
tests/test_content/: test_origin_loader.py  test_region_loader.py  test_spell_loader.py
tests/test_engine/: test_turn_loop_statics.py  test_validators.py
tests/test_llm/: test_context_packer.py  test_output_parser.py  test_token_budget.py
tests/test_mechanics/: test_ability_scores.py  test_affinity.py  test_behavior_tracker.py  test_character_creation.py  test_class_resources.py  test_combat_math.py  test_conditions.py  test_crafting.py  test_death.py  test_dice.py  test_economy.py  test_elements.py  test_guilds.py  test_leveling.py  test_multiclassing.py  test_reputation.py  test_size.py  test_spell_combinations.py  test_spell_invention.py  test_spellcasting.py  test_survival.py  test_threat_assessment.py  test_trait_effects.py  test_world_clock.py  test_wounds.py
tests/test_storage/: test_database.py  test_guild_repo.py  test_snapshot_repo.py  test_spell_creation_repo.py  test_trait_repo.py
(+344 files in other folders)
