[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-rpg"
version = "0.1.0"
description = "A D&D-like high fantasy text RPG powered by LLMs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "chromadb>=0.4",
    "rich>=13.0",
    "typer>=0.9",
    "Jinja2>=3.1",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
text-rpg = "text_rpg.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/text_rpg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
